# intellidyn_erp

./: .env  Cargo.toml  README.md
src/: company.rs  main.rs  response.rs
src/db/: connection.rs  mod.rs  service.rs
src/enums/: country.rs  currency.rs  language.rs  mod.rs
src/ppie/: mod.rs
src/ppie/instance_img/: mod.rs
src/ppie/instance_img/enterprise_structure/: mod.rs
src/ppie/instance_img/enterprise_structure/assignment/: mod.rs
src/ppie/instance_img/enterprise_structure/assignment/financial_accounting/: mod.rs
src/ppie/instance_img/enterprise_structure/assignment/financial_accounting/ox16_assign_company_code_to_company/: assign_company_code_to_company.rs  mod.rs
src/ppie/instance_img/enterprise_structure/definition/financial_accounting/: mod.rs
src/ppie/instance_img/enterprise_structure/definition/financial_accounting/ox02_edit_copy_delete_check_company_code/: company_code.rs  mod.rs
src/ppie/instance_img/enterprise_structure/definition/financial_accounting/ox03_define_business_area/: business_area.rs  mod.rs
src/ppie/instance_img/enterprise_structure/definition/financial_accounting/ox15_define_company/: company.rs
