[package]
name = "intellidyn_erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio-postgres = { version = "0.7.6", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-time-0_3"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
postgres-openssl="0.5.0"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3.11", features = ["serde"] }